styles.css
html, body {
    margin: 0; /* Remove default browser margins */
    padding: 0;
}

.master-container{
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 2fr 10fr;
    height: 100vh;
    width: 100vw;
}



.sidebar-container{
    background-color: aqua;
    display: grid;
    grid-row: 1 / 4;
    grid-template-rows: 2fr 1fr;
    height: 100%;
}

.sidebar-upper{
    background-color: azure;
    display: grid;
    gap: 30px;
    grid-template-rows: 1fr 4fr 2fr;
}

.sidebar-header{
    align-items: stretch;
    background-color: bisque;
    display: grid;
    gap: 10px;
    grid-template-columns: 1fr 5fr;
    justify-items: stretch;
    padding-right: 12px;
}

.sidebar-header>h2{
    align-self: center;
}

.sidebar-top{
    align-items: stretch;
    background-color: cadetblue;
    display: grid;
    grid-template-rows: repeat(6, 1fr);
    justify-items: start;
}

.sidebar-bottom{
    align-items: stretch;
    background-color: cadetblue;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    justify-items: start;
}

.sidebar-content{
    align-items: center;
    border: solid black;
    display: grid;
    gap: 10px;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 40px;
    justify-items: start;
    width: 100%;
}

.sidebar-bottom{
    background-color: azure;
}



.navbar-container{
    background-color: aquamarine;
    display: grid;
    gap: 12px;
    grid-column: 2 / 3;
    grid-template-columns: 4fr 2fr;
    grid-row: 1 / 2;
}

.navbar-section-search{
    align-items: center;
    background-color: pink;
    display: grid;
    gap: 8px;
    grid-template-columns: 1fr 10fr;
}

form>input{
    border: none;
    border-radius: 8px;
    width: 89%;
}

.navbar-section-buttons{
    align-items: center;
    display: grid;
    gap: 8px;
    grid-template-columns:  1fr 2fr 5fr;
    justify-items: start;
}




.greet-container{
    background-color: coral;
    display: grid;
    grid-column: 2 / 3;
    grid-template-columns: 6fr 4fr;
    grid-row: 2 / 3;
}

.greet-section-name{
    align-items: center;
    background-color: cornsilk;
    display: grid;
    grid-template-columns: 1fr 5fr;
}

.greet-actual-text{
    background-color: chocolate;
}

.greet-h2{
    font-size: 24px;
}

.greet-section-buttons{
    align-items: center;
    display: flex;
    justify-content: space-evenly;
}

.greet-section-buttons>button{
    border: none;
    border-radius: 20px;
    background-color: lightblue;
    height: 35px;
    width: 85px;
}



.board-container{
    background-color: aliceblue;
    display: grid;
    grid-column: 2 / 3;
    grid-template-columns: 3fr 1fr;
    grid-row: 3 / 4;
}

.board-left{
    background-color: paleturquoise;
    display: grid;
    grid-column: 1 / 2;
    grid-template-rows: 1fr 12fr;
    height: 100%;
}

.board-left>h4{
    align-self: end;
}

.board-projects{
    background-color: sandybrown;
    display: grid;
    gap: 20px;
    grid-row: 2 / 3;
    grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
}

.board-project-item{
    background-color: seagreen;
    border-radius: 10px;
    box-shadow: -8px 0px red;
    box-sizing: border-box;
    display: grid;
    grid-template-rows: 30px 3fr 50px;
    height: 250px;
}

.board-project-item-image-section{
    display: flex;
    grid-row: 3 / 4;
    justify-content: flex-end;
}

.board-right{
    background-color: burlywood;
    display: grid;
    grid-column: 2 / 3;
    grid-template-rows: 1fr 6fr 6fr;
    height: 100%;
    padding-left: 20px;
    padding-right: 20px;
}

.board-right>h4{
    align-self: end;
}

.board-right-upper-modal{
    align-items: center;
    background-color: azure;
    border-radius: 10px;
    box-sizing: border-box;
    display: grid;
    font-size: 12px;
    grid-template-rows: repeat(3, 1fr);
    height: 90%;
    padding-left: 10px;
    padding-right: 10px;
}

.board-right-upper-item{
    display: grid;
    grid-template-rows: 25px 8fr;
}

.board-right-upper-item>h5{
    align-self: start;
}

.board-right-lower-modal{
    align-items: center;
    background-color: azure;
    border-radius: 10px;
    box-sizing: border-box;
    display: grid;
    font-size: 12px;
    grid-template-rows: repeat(4, 1fr);
    height: 90%;
}

.board-right-lower-item{
    align-items: center;
    display: grid;
    grid-template-columns: 1fr 5fr;
}

